[package]
name = "bevy_tile_atlas"
version = "0.2.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "A TextureAtlas builder for ordered tilesets"
repository = "https://github.com/MrGVSV/bevy_tile_atlas"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "tile", "tileset", "texture", "ordered"]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*"]

[dependencies]
bevy_asset = { version = "0.6", default-features = false }
bevy_ecs = { version = "0.6", default-features = false }
bevy_log = { version = "0.6", default-features = false, optional = true }
bevy_math = { version = "0.6", default-features = false }
bevy_render = { version = "0.6", default-features = false }
bevy_sprite = { version = "0.6", default-features = false }
thiserror = "1.0.30"

[dev-dependencies]
bevy = "0.6"

[features]
default = ["debug"]
# Enables logging (specifically for warnings, errors, or automatic texture format conversions)
debug = ["bevy_log"]

[[example]]
name = "atlas"
path = "examples/atlas.rs"
